@@ -1,3 +1,8 @@
+2005-12-27  Nick Clifton  <nickc@redhat.com>
+
+	PR binutils/1990
+	* libtool.m4: Synchronize with version in GCC sources.
+
 2005-12-20  Paolo Bonzini  <bonzini@gnu.org>
 
         Revert Ada-related part of the previous change.
